Send power with FEUser and fix dark mode for card.

--- a/static/app/css/dark-theme.css
+++ b/static/app/css/dark-theme.css
@@ -30,3 +30,8 @@ a:focus, .menu .menu-item > a:hover {
 .panel {
     border: .05rem solid #454f5e;
 }
+
+.card {
+    border: .05rem solid #454f5e;
+    background: #313a49;
+}
